# conversational_analytics

./: .gitignore  SAMPLE_QUESTIONS.md  docker-commands.txt  docker-compose.yml  ingredients.sql  main.py  nlq_descriptions.json  pyproject.toml  response.txt  response_new.txt  schema_documentation.json  semantic_layer.json  temp (2).py  temp.py  test_pool.py
docs/: DAILY_DATA_GUIDE.md  MEMORY_ARCHITECTURE.md  QUERY_FLOW_AND_MEMORY.md
pgscript/: agent-memory-db-init.sql  init.sql  zenvyra-analytics-db-init.sql
sql_data/: 01_all_inserts.sql  customers_inserts.sql  discounts_inserts.sql  employee_inserts.sql  ingredients_inserts.sql  inventory_inserts.sql  location_inserts.sql  loyalty_accounts_inserts.sql  loyalty_txn_inserts.sql  menu_categories_inserts.sql  menu_items_inserts.sql  order_discounts_inserts.sql  order_items_inserts.sql  orders_inserts.sql  payments_inserts.sql  recipe_items_inserts.sql  reservations_inserts.sql  roles_inserts.sql  shifts_inserts.sql  supplier_inserts.sql  supplier_items_inserts.sql  tables_inserts.sql
sql_data/daily_20260419/: daily_inserts_20260419.sql  discounts_inserts_20260419.sql  loyalty_txn_inserts_20260419.sql  order_discounts_inserts_20260419.sql  order_items_inserts_20260419.sql  orders_inserts_20260419.sql  payments_inserts_20260419.sql  reservations_inserts_20260419.sql  shifts_inserts_20260419.sql
sql_data/daily_20260420/: daily_inserts_20260420.sql  discounts_inserts_20260420.sql  loyalty_txn_inserts_20260420.sql  order_discounts_inserts_20260420.sql  order_items_inserts_20260420.sql  (+4 more)
tests/: test_long_term_memory.py
(+76 files in other folders)
